# Python-Ultra-Hardened-Infrastructure-UHI-

./: Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
0-bootstrap/: README.md  bootstrap.py  container.py
1-engine/: README.md  benchmark.py  nano_scheduler.py
2-architect/: README.md  main.py  memory_squeezer.py  schema_validator.py
3-shield/: README.md
3-strategy/: README.md  logic_gate.py  main.py  state_machine.py
4-pipeline/: .gitignore  README.md  main.py  polars_etl.py  stream_processor.py
4-pipeline/logs/: audit_logs  inspecao_tecnica
5-drivers/: .gitignore  README.md  ipc_server.py  main.py  zmq_bridge.py
6-telemetry/: README.md  main.py  metrics_exporter.py  system_monitor.py
7-lab/: README.md  latency_bench.py  main.py  trace_analyzer.py
8-storage/: .gitignore  README.md  atomic_writer.py  main.py  mmap_db.py
9-protocols/: README.md  bit_packer.py  main.py  msgpack_codec.py
apps/: README.md  fast_scraper.py  industrial_controller.py  main.py  schema.py  smart_search.py
