[project]
name = "python-uhi"
version = "1.0.0"
description = "Ultra-Hardened Infrastructure for High-Performance Systems"
authors = [{name = "Kauan Oliveira", email = "kauandias747474@gmail.com"}]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "polars>=0.20",
    "msgpack>=1.0",
    "uvloop>=0.19",
    "orjson>=3.9",
    "pyzmq>=25.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I", "S"] # Erros, Flakes, Bugbear, Isort, Bandit

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.infection] # Exemplo para testes de mutação em Python
timeout = 10
